Repaired cropping images

--- a/app/assets/stylesheets/attempt.scss
+++ b/app/assets/stylesheets/attempt.scss
@@ -30,3 +30,7 @@ margin: 0 auto;
     cursor: inherit;
     display: block;
 }
+.top5 { margin-top:5px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top30 { margin-top:30px; }
